# underHFS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
bench/: lm_smoke.py  microbench.py
cpp/: bindings.cpp  nccl_runtime.cpp  nccl_runtime.hpp  serve_main.cpp  tensor_core.cpp  tensor_core.hpp
cuda/: kernels.cu  kernels.hpp
docs/: api-reference.md  architecture.md  build.md  pytorch-pain-points.md  release.md
project/: README.md
project/BetaGo/: README.md  train_betago_agent.py
project/BetaGo/artifacts/: betago_agent_state.json  metrics.json
project/BetaGo/reports/: report.md
project/liveSee/: README.md  live_world.py  play_live_world.py  train_live_world.py  train_livesee_stream.py
project/progamer_rl/: README.md  train_progamer_policy.py
project/text2image_text2pixel/: README.md  train_text2pixel.py
project/text2world/: README.md  train_text2world.py
scripts/: build_cuda_editable.bat  build_wheels.bat  release_check.bat
src/underhfs/: __init__.py  autograd.py  benchmarks.py  cli.py  compile.py  config.py  cuda.py  data.py  datasets.py  diagnostics.py  distributed.py  functional.py  native.py  nn.py  optim.py  runtime.py  serialization.py  serve.py  tensor.py  testing.py  text.py
tests/: test_benchmarks.py  test_cli_fullstack.py  test_cli_train.py  test_guardrails.py  test_losses_serialization.py  test_native_contract.py  test_nn_optim.py  test_project_starters.py  test_runtime_memory_planner.py  test_runtime_surface.py  test_tensor_autograd.py  test_text_generation.py  test_transformer_lm.py
