cmake_minimum_required(VERSION 3.28)
project(underhfs LANGUAGES CXX)

option(UNDERHFS_WITH_CUDA "Build CUDA kernels" OFF)
option(UNDERHFS_WITH_CUDNN "Build cuDNN convolution paths" OFF)
option(UNDERHFS_WITH_NCCL "Build NCCL distributed paths" OFF)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(UNDERHFS_WITH_CUDA AND NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
  set(CMAKE_CUDA_ARCHITECTURES 89)
endif()

find_package(pybind11 CONFIG REQUIRED)

pybind11_add_module(_core cpp/bindings.cpp cpp/tensor_core.cpp)
target_include_directories(_core PRIVATE cpp)
target_compile_definitions(_core PRIVATE UNDERHFS_VERSION="0.1.0")

add_executable(underhfs_cpp_serve cpp/serve_main.cpp)
set_target_properties(underhfs_cpp_serve PROPERTIES OUTPUT_NAME "underhfs_cpp_serve")

if(UNDERHFS_WITH_CUDA)
  enable_language(CUDA)
  find_package(CUDAToolkit REQUIRED)
  target_sources(_core PRIVATE cuda/kernels.cu)
  target_include_directories(_core PRIVATE cuda)
  target_link_libraries(_core PRIVATE CUDA::cudart CUDA::cublas)
  target_compile_definitions(_core PRIVATE UNDERHFS_WITH_CUDA=1)
  if(UNDERHFS_WITH_CUDNN)
    if(NOT TARGET CUDA::cudnn)
      message(FATAL_ERROR "UNDERHFS_WITH_CUDNN=ON requires cuDNN in the CUDA Toolkit CMake package")
    endif()
    target_link_libraries(_core PRIVATE CUDA::cudnn)
    target_compile_definitions(_core PRIVATE UNDERHFS_WITH_CUDNN=1)
  endif()
  if(UNDERHFS_WITH_NCCL)
    find_library(NCCL_LIBRARY nccl HINTS ENV NCCL_ROOT PATH_SUFFIXES lib lib64)
    find_path(NCCL_INCLUDE_DIR nccl.h HINTS ENV NCCL_ROOT PATH_SUFFIXES include)
    if(NOT NCCL_LIBRARY OR NOT NCCL_INCLUDE_DIR)
      message(FATAL_ERROR "UNDERHFS_WITH_NCCL=ON requires NCCL_LIBRARY and NCCL_INCLUDE_DIR")
    endif()
    target_include_directories(_core PRIVATE ${NCCL_INCLUDE_DIR})
    target_link_libraries(_core PRIVATE ${NCCL_LIBRARY})
    target_compile_definitions(_core PRIVATE UNDERHFS_WITH_NCCL=1)
  endif()
endif()

install(TARGETS _core LIBRARY DESTINATION underhfs)
install(TARGETS underhfs_cpp_serve RUNTIME DESTINATION underhfs/bin)
