[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "underhfs"
version = "0.1.0"
description = "underHFS: a PyTorch-style full-stack AI framework foundation."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "underHFS" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]
oracle = ["numpy>=2.0", "torch>=2.0"]
serve = ["fastapi>=0.115", "uvicorn>=0.32", "grpcio>=1.67", "opencv-python>=4.10"]

[project.scripts]
underhfs = "underhfs.cli:main"

[tool.scikit-build]
cmake.version = ">=3.28"
wheel.packages = ["src/underhfs"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
